# EmailWise

./: .gitignore  README.md  ai_analyzer.py  app.py  gunicorn_config.py  models.py  pyproject.toml  replit.md  requirements.txt
.early.coverage/python/: coverage.json
instance/: emailwise.db
static/css/: style.css
static/js/: app.js
templates/: index.html
